fix menu bug on mobile

--- a/static/assets/css/naija.webflow.css
+++ b/static/assets/css/naija.webflow.css
@@ -1,7 +1,5 @@
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   color: #333;
   font-size: 14px;
   line-height: 20px;
@@ -116,13 +114,7 @@ p {
   top: 0%;
   right: 0%;
   bottom: 0%;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#57867d),
-    to(#74e779)
-  );
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#57867d), to(#74e779));
   background-image: linear-gradient(180deg, #57867d, #74e779);
   opacity: 1;
 }
@@ -389,18 +381,9 @@ p {
   top: 0%;
   right: 0%;
   bottom: 0%;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(87, 134, 125, 0.91)),
-    color-stop(90%, rgba(0, 0, 0, 0.95))
-  );
-  background-image: linear-gradient(
-    180deg,
-    rgba(87, 134, 125, 0.91),
-    rgba(0, 0, 0, 0.95) 90%
-  );
+  z-index: 2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(87, 134, 125, 0.91)), color-stop(90%, rgba(0, 0, 0, 0.95)));
+  background-image: linear-gradient(180deg, rgba(87, 134, 125, 0.91), rgba(0, 0, 0, 0.95) 90%);
 }
 
 .hero-text__wrapper {
@@ -625,10 +608,8 @@ p {
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.65);
   opacity: 0;
-  -webkit-transition: opacity 400ms cubic-bezier(0.645, 0.045, 0.355, 1),
-    margin 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: opacity 400ms cubic-bezier(0.645, 0.045, 0.355, 1),
-    margin 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transition: opacity 400ms cubic-bezier(.645, .045, .355, 1), margin 400ms cubic-bezier(.645, .045, .355, 1);
+  transition: opacity 400ms cubic-bezier(.645, .045, .355, 1), margin 400ms cubic-bezier(.645, .045, .355, 1);
   color: #fff;
 }
 
@@ -1723,7 +1704,7 @@ p {
   min-height: 12vw;
   min-width: 10.5vw;
   background-color: #bde7be;
-  opacity: 0.15;
+  opacity: 0.13;
   -o-object-fit: cover;
   object-fit: cover;
 }
@@ -2274,6 +2255,12 @@ p {
 
   .category-icon {
     margin-bottom: 5px;
+    -webkit-transition: height 400ms ease, opacity 300ms ease, width 400ms ease;
+    transition: height 400ms ease, opacity 300ms ease, width 400ms ease;
+  }
+
+  .category-icon.active {
+    height: 0px;
   }
 
   .c-hero {
@@ -2308,12 +2295,20 @@ p {
     min-height: 700px;
   }
 
+  .c-menu__slider {
+    overflow: auto;
+  }
+
   .c-category {
     height: 330px;
   }
 
   .c-category__inner {
     width: 240px;
+  }
+
+  .menu-slider__inner {
+    padding-left: 30px;
   }
 
   .c-category__details {
@@ -2586,6 +2581,10 @@ p {
 }
 
 @media screen and (max-width: 479px) {
+  .l-section.hero-section {
+    min-height: 0px;
+  }
+
   .letter-bg {
     -webkit-transform: translate(0px, 11vw);
     -ms-transform: translate(0px, 11vw);
@@ -2647,7 +2646,9 @@ p {
 
   .c-hero {
     overflow: hidden;
-    padding-bottom: 13vh;
+    min-height: 700px;
+    padding-top: 30px;
+    padding-bottom: 70px;
   }
 
   .hero-text__wrapper {
@@ -2662,7 +2663,7 @@ p {
 
   .hero-subtext__wrapper {
     left: 20px;
-    bottom: 80px;
+    bottom: 70px;
     max-width: 48%;
   }
 
@@ -2673,8 +2674,12 @@ p {
     line-height: 21px;
   }
 
+  .c-menu {
+    min-height: 0px;
+    padding-top: 60px;
+  }
+
   .c-menu__slider {
-    height: 100vh;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -2686,6 +2691,7 @@ p {
   }
 
   .menu-slider__inner {
+    padding-left: 15px;
     grid-auto-columns: 1fr;
     -ms-grid-columns: 47vw 47vw;
     grid-template-columns: 47vw 47vw;
